# esbirra

./: .gitignore  CMakeLists.txt  README.md
include/: Brightness.hpp  Control.hpp  IOMeasure.hpp
public/: index.html
public/css/: esbirra.css  marbles.css  smartphone.css
public/js/: client.js
src/: Brightness.cpp  Control.cpp  IOMeasure.cpp  server.cpp
